--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,5 +43,7 @@ jobs:
 
       - run: gradle build
 
+      - run: ls
+
       - store_artifacts:
-          path: ~/build/libs
+          path: ~/repo/build/libs
