--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
+      - image: docker:17.05.0-ce-git
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -43,7 +44,44 @@ jobs:
 
       - run: gradle build
 
-      - run: ls
-
       - store_artifacts:
           path: ~/repo/build/libs
+
+#      - setup_remote_docker
+#
+#      - run:
+#          name: Install dependencies
+#          command: |
+#            apk add --no-cache \
+#            py-pip=9.0.0-r1
+#            pip install \
+#            docker-compose==1.12.0 \
+#            awscli==1.11.76
+#
+#      - restore_cache:
+#          keys:
+#            - v1-{{ .Branch }}
+#          paths:
+#            - /caches/app.tar
+#
+#      - run:
+#          name: Load Docker image layer cache
+#          command: |
+#            set +o pipefail
+#            docker load -i /caches/app.tar | true
+#
+#      - run:
+#          name: Build application Docker image
+#          command: |
+#            docker build --cache-from=app -t meamma/example-spring .
+#
+#      - run:
+#          name: Save Docker image layer cache
+#          command: |
+#            mkdir -p /caches
+#            docker save -o /caches/app.tar meamma/example-spring
+#
+#      - save_cache:
+#          key: v1-{{ .Branch }}-{{ epoch }}
+#          paths:
+#            - /caches/app.tar
