--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,41 +47,41 @@ jobs:
       - store_artifacts:
           path: ~/repo/build/libs
 
-#      - setup_remote_docker
-#
-#      - run:
-#          name: Install dependencies
-#          command: |
-#            apk add --no-cache \
-#            py-pip=9.0.0-r1
-#            pip install \
-#            docker-compose==1.12.0 \
-#            awscli==1.11.76
-#
-#      - restore_cache:
-#          keys:
-#            - v1-{{ .Branch }}
-#          paths:
-#            - /caches/app.tar
-#
-#      - run:
-#          name: Load Docker image layer cache
-#          command: |
-#            set +o pipefail
-#            docker load -i /caches/app.tar | true
-#
-#      - run:
-#          name: Build application Docker image
-#          command: |
-#            docker build --cache-from=app -t meamma/example-spring .
-#
-#      - run:
-#          name: Save Docker image layer cache
-#          command: |
-#            mkdir -p /caches
-#            docker save -o /caches/app.tar meamma/example-spring
-#
-#      - save_cache:
-#          key: v1-{{ .Branch }}-{{ epoch }}
-#          paths:
-#            - /caches/app.tar
+      - setup_remote_docker
+
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --no-cache \
+            py-pip=9.0.0-r1
+            pip install \
+            docker-compose==1.12.0 \
+            awscli==1.11.76
+
+      - restore_cache:
+          keys:
+            - v1-{{ .Branch }}
+          paths:
+            - /caches/app.tar
+
+      - run:
+          name: Load Docker image layer cache
+          command: |
+            set +o pipefail
+            docker load -i /caches/app.tar | true
+
+      - run:
+          name: Build application Docker image
+          command: |
+            docker build --cache-from=app -t meamma/example-spring .
+
+      - run:
+          name: Save Docker image layer cache
+          command: |
+            mkdir -p /caches
+            docker save -o /caches/app.tar meamma/example-spring
+
+      - save_cache:
+          key: v1-{{ .Branch }}-{{ epoch }}
+          paths:
+            - /caches/app.tar
