--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,14 +49,14 @@ jobs:
 
       - setup_remote_docker
 
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --no-cache \
-            py-pip=9.0.0-r1
-            pip install \
-            docker-compose==1.12.0 \
-            awscli==1.11.76
+#      - run:
+#          name: Install dependencies
+#          command: |
+#            apk add --no-cache \
+#            py-pip=9.0.0-r1
+#            pip install \
+#            docker-compose==1.12.0 \
+#            awscli==1.11.76
 
       - restore_cache:
           keys:
