--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
       - run:
           name: Save Docker image layer cache
           command: |
-            mkdir -p /caches
+            sudo mkdir -p /caches
             docker save -o /caches/app.tar meamma/example-spring
 
       - save_cache:
