--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
           name: Save Docker image layer cache
           command: |
             sudo mkdir -p /caches
-            docker save -o /caches/app.tar meamma/example-spring
+            sudo docker save -o /caches/app.tar meamma/example-spring
 
       - save_cache:
           key: v1-{{ .Branch }}-{{ epoch }}
