--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,13 +62,13 @@ jobs:
           keys:
             - v1-{{ .Branch }}
           paths:
-            - /caches/app.tar
+            - ~/caches/app.tar
 
       - run:
           name: Load Docker image layer cache
           command: |
             set +o pipefail
-            docker load -i /caches/app.tar | true
+            docker load -i ~/caches/app.tar | true
 
       - run:
           name: Build application Docker image
@@ -78,10 +78,10 @@ jobs:
       - run:
           name: Save Docker image layer cache
           command: |
-            sudo mkdir -p /caches
-            sudo docker save -o /caches/app.tar meamma/example-spring
+            mkdir -p ~/caches
+            docker save -o ~/caches/app.tar meamma/example-spring
 
       - save_cache:
           key: v1-{{ .Branch }}-{{ epoch }}
           paths:
-            - /caches/app.tar
+            - ~/caches/app.tar
