--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,9 +41,9 @@ jobs:
       - run: gradle build
 
       - persist_to_workspace:
-          root: .
+          root: ~
           paths:
-            - ~/repo/build/libs/demo-0.0.1-SNAPSHOT.jar
+            - ./repo/build/libs/demo-0.0.1-SNAPSHOT.jar
 
       - store_artifacts:
           path: ~/repo/build/libs
