--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,3 +93,17 @@ jobs:
           key: v1-{{ .Branch }}-{{ epoch }}
           paths:
             - ~/caches/app.tar
+workflows:
+  version: 2
+  build-master:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: master
+      - build-docker:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
