--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
           root: .
           paths:
             - ./build/libs/demo-0.0.1-SNAPSHOT.jar
+            - ./Dockerfile
 
       - store_artifacts:
           path: ~/repo/build/libs
@@ -81,7 +82,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t $IMAGE_NAME .
+            docker build --cache-from=app -t $IMAGE_NAME /tmp/workspace
 
       - run:
           name: Save Docker image layer cache
