--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,8 @@ jobs:
   build-docker:
     executor: docker-publisher
 
+    working_directory: /tmp/workspace
+
     steps:
       - attach_workspace:
           at: /tmp/workspace
@@ -84,7 +86,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t $IMAGE_NAME /tmp/workspace
+            docker build --cache-from=app -t $IMAGE_NAME .
 
       - run:
           name: Save Docker image layer cache
